--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@hexlet/testing-task-manager": "0.1.1",
+    "dotenv": "16.4.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
