--- a/package.json
+++ b/package.json
@@ -12,23 +12,24 @@
     "test:ui": "npx playwright test --ui"
   },
   "dependencies": {
-    "@hexlet/testing-task-manager": "0.1.1",
+    "@hexlet/testing-task-manager": "0.1.2",
     "dotenv": "16.4.5",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.11.1",
-    "@playwright/test": "^1.48.0",
-    "@types/node": "^22.7.5",
-    "@types/react": "^18.3.10",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.2",
-    "eslint": "^9.11.1",
-    "eslint-plugin-react": "^7.37.0",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.12",
-    "globals": "^15.9.0",
-    "vite": "^5.4.8"
+    "@eslint/js": "9.11.1",
+    "@playwright/test": "1.48.2",
+    "@types/node": "22.8.4",
+    "@types/react": "18.3.12",
+    "@types/react-dom": "18.3.1",
+    "@vitejs/plugin-react": "4.3.3",
+    "eslint": "9.11.1",
+    "eslint-plugin-react": "7.37.2",
+    "eslint-plugin-react-hooks": "5.1.0-rc.0",
+    "eslint-plugin-react-refresh": "0.4.14",
+    "globals": "15.11.0",
+    "npm-check-updates": "17.1.9",
+    "vite": "5.4.10"
   }
 }
